force-app/main/default/objects/Ledger_Entry__c/Ledger_Entry__c.object-meta.xml
<CustomObject>
    <description>Entry in our prototype blockchain ledger</description>
    <label>Ledger Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Ledger Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>