force-app/main/default/objects/Ledger_Entry__c/fields/Block_Hash__c.field-meta.xml
<CustomField>
    <fullName>Block_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The hash of the transaction hash and the previous block hash</description>
    <externalId>true</externalId>
    <label>Block Hash</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>