force-app/main/default/objects/Ledger_Entry__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Name of the opportunity</description>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>