force-app/main/default/objects/Ledger_Entry__c/fields/Prior_Block_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prior_Block_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hash of the prior block (aka, block_hash__c of the prior block)</description>
    <label>Prior Block Hash</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>