force-app/main/default/objects/Ledger_Entry__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Date of this transaction.</description>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>