force-app/main/default/objects/Ledger_Entry__c/fields/Transaction_Field_List__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Field_List__c</fullName>
    <description>List of API names of fields included in the transaction. Fields must not be calculated and must not be relationship fields.</description>
    <label>Transaction Field List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>