force-app/main/default/objects/Ledger_Entry__c/fields/Transaction_Hash__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Hash__c</fullName>
    <description>Hash of the transaction fields</description>
    <label>Transaction Hash</label>
    <length>70</length>
    <type>Text</type>
</CustomField>