force-app/main/default/objects/Ledger_Entry__c/validationRules/Opportunity_Amount_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Amount_must_be_specified</fullName>
    <active>true</active>
    <description>Enforce opportunity amount</description>
    <errorConditionFormula>ISBLANK( Opportunity_Amount__c )</errorConditionFormula>
    <errorMessage>Opportunity amount must be specified in each ledger entry</errorMessage>
</ValidationRule>