force-app/main/default/objects/Ledger_Entry__c/validationRules/Opportunity_name_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_name_must_be_specified</fullName>
    <active>true</active>
    <description>Enforce an opportunity name</description>
    <errorConditionFormula>ISBLANK( Opportunity_Name__c )</errorConditionFormula>
    <errorMessage>An opportunity name must be specified for each ledger entry</errorMessage>
</ValidationRule>